fixes broken style

--- a/packages/react/src/Card/Card.module.css
+++ b/packages/react/src/Card/Card.module.css
@@ -19,7 +19,7 @@
     'action action';
   flex: auto;
   grid-template-rows: auto auto auto auto 1fr;
-  position: absolute;
+  position: relative;
 }
 
 .Card:focus-within {
